--- a/src/pages/Login/LoginPage.scss
+++ b/src/pages/Login/LoginPage.scss
@@ -18,54 +18,26 @@
   display: flex;
   flex-direction: column;
   row-gap: 32px;
-}
 
-.login__logo {
-  width: 144px;
-  height: 144px;
-  align-self: center;
-}
-
-.login__input {
-  border: $color-logo solid 1px;
-  margin-top: 16px;
-
-  input {
-    background-color: transparent;
-    color: $color-text-main;
-    font-size: 18px;
-    outline: none;
-    border: none;
-    padding: 8px 20px;
-    width: 100%;
+  &__logo {
+    width: 144px;
+    height: 144px;
+    align-self: center;
   }
-}
 
-button {
-  padding: 8px 64px;
-  margin-top: 32px;
-  outline: none;
-  background-color: transparent;
+  &__input {
+    border: $color-logo solid 1px;
+    margin-top: 16px;
 
-  border: $color-logo solid 1px;
-  border-radius: 50px;
-  cursor: pointer;
-
-  font-family: inherit;
-  font-size: 18px;
-  color: $color-text-main;
-
-  transition: background-color 0.3s ease-in-out;
-
-  &:hover {
-    background: $color-logo;
-  }
-}
-
-@media (max-width: 576px) {
-  button {
-    padding: 16px 32px;
-    font-size: 16px;
+    input {
+      background-color: transparent;
+      color: $color-text-main;
+      font-size: 18px;
+      outline: none;
+      border: none;
+      padding: 8px 20px;
+      width: 100%;
+    }
   }
 }
 
