--- a/src/theme/colors.scss
+++ b/src/theme/colors.scss
@@ -11,3 +11,4 @@ $color-bg-dark: #2a271e;
 $color-bg-teal: rgba(48, 133, 163, 0.37);
 $color-bg-text-teal: #3085A3FF;
 $color-air-blue: #739AAA;
+$color-main-teal: #609DB6;
