--- a/src/components/ui/TextInput/TextInput.scss
+++ b/src/components/ui/TextInput/TextInput.scss
@@ -1,20 +1,27 @@
 @import "../../../theme/colors";
 
 .text-input {
-  border: $color-logo solid 1px;
   margin-top: 16px;
 
   input {
-    background-color: transparent;
+    border: $color-logo solid 1px;
+    border-radius: 21px;
+    background-color: $color-bg-lighter;
+
     color: $color-text-main;
     font-size: 18px;
-    outline: none;
-    border: none;
-    padding: 20px;
+    padding: 10px 20px;
+
     width: 100%;
   }
 }
 
 
-//@media (max-width: 576px) {
-//}
+@media (max-width: 576px) {
+  .text-input {
+    input {
+      font-size: 14px;
+      padding: 10px 16px;
+    }
+  }
+}
