--- a/src/pages/AdminPage/components/ClientsTab/ClientsTab.scss
+++ b/src/pages/AdminPage/components/ClientsTab/ClientsTab.scss
@@ -1,9 +1,8 @@
 @import "../../../../theme/colors";
 
 .clients-tab {
-  margin-top: 24px;
-
   &__filter {
+    display: inline-block;
     border: 1px $color-text-main solid;
     border-radius: 24px;
     padding: 24px 32px;
@@ -12,6 +11,70 @@
       font-size: 24px;
       font-weight: 200;
     }
+
+    &__inputs {
+      display: flex;
+      flex-wrap: wrap;
+      column-gap: 32px;
+    }
+
+    &__btns {
+      margin-top: 32px;
+      display: flex;
+      column-gap: 32px;
+      row-gap: 16px;
+      flex-wrap: wrap;
+    }
   }
 
+  &__clients {
+
+  }
 }
+
+.btn-search {
+  background-color: $color-text-main;
+  color: $color-bg;
+}
+
+.btn-add-client {
+  background-color: $color-main-teal;
+  color: $color-bg;
+  margin-block: 32px;
+
+  &:hover {
+    background-color: $color-bg-teal;
+    color: $color-text-main;
+    transition: background-color 0.3s ease-in-out, color 0.5s ease-in-out;
+  }
+}
+
+
+@media (max-width: 992px) {
+}
+
+@media (max-width: 768px) {
+}
+
+@media (max-width: 576px) {
+  .clients-tab {
+
+    &__filter {
+      padding: 24px 32px;
+
+      h3 {
+        font-size: 16px;
+      }
+
+      &__inputs {
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 32px;
+      }
+
+      &__btns {
+      }
+    }
+  }
+}
+
