--- a/src/pages/MasterClasses/MasterClassesPage.scss
+++ b/src/pages/MasterClasses/MasterClassesPage.scss
@@ -66,7 +66,8 @@
 
 @media (max-width: 576px) {
   .container-title {
-    font-size: 42px;
+    font-size: 36px;
+    margin-top: 8px;
     /*letter-spacing: -1.25px;*/
   }
 }
