--- a/src/pages/AdminPage/components/ClientsTab/ClientsTab.scss
+++ b/src/pages/AdminPage/components/ClientsTab/ClientsTab.scss
@@ -41,6 +41,7 @@
   background-color: $color-main-teal;
   color: $color-bg;
   margin-block: 32px;
+  display: block;
 
   &:hover {
     background-color: $color-bg-teal;
