--- a/src/pages/MasterClasses/MasterClassesPage.scss
+++ b/src/pages/MasterClasses/MasterClassesPage.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: Ardeco;
-  src: url("../../../../lab2/src/assets/fonts/ardeco/Ardeco.ttf") format("truetype");
+  src: url("../../assets/fonts/ardeco/Ardeco.ttf") format("truetype");
 }
 
 .container-title {
