feat: auth logic + clients logic
нужно переделать, чтобы при обновлении страницы пользователь не переставал быть авторизованным

--- a/src/components/ui/Header/Header.scss
+++ b/src/components/ui/Header/Header.scss
@@ -72,7 +72,31 @@ header {
   }
 }
 
+.header__dropdown-user {
+  display: none;
+  list-style: none;
+  position: absolute;
+  right: 32px;
+  overflow: auto;
+  background-color: $color-bg-lighter;
+  padding: 16px;
+}
+
+.header__dropdown-user__items {
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+
+  h4 {
+    font-size: 32px;
+  }
+}
+
 .header__dropdown:hover .header__dropdown-menu {
+  display: inline-block;
+}
+
+.header__dropdown:hover .header__dropdown-user {
   display: inline-block;
 }
 
