feat: 3d page + auth access token adding to localstore

--- a/src/components/ui/Footer/Footer.scss
+++ b/src/components/ui/Footer/Footer.scss
@@ -30,6 +30,13 @@ footer {
   &:hover {
     text-decoration: underline;
   }
+
+  &_phone {
+    font-size: 20px;
+    &:hover {
+      text-decoration: none;
+    }
+  }
 }
 
 .copyright {
