feat: auth fixes
1) при выходе со страницы админки теперь есть возможность вернуться, нажав на кнопку входа в аккаунт
2) обработка неправильно введенных данных для авторизации
3) при обновлении страницы админки пользователь остается на ней

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,15 @@
   font-family: Rawline, sans-serif;
 }
 
+.App {
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
 @font-face {
   font-family: Rawline;
   src: url("assets/fonts/rawline/rawline-100.ttf") format("truetype");
