изменения в логике авторизации
обработка ошибки при авторизации
сохранение в localstorage refresh_token
новая страница ProductGenerationPage
новый компонент TexturedMug

доделать:
логика регистрации
передача access_token в заголовок запроса
логика получения текстур и 3D-моделей

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,14 +5,14 @@
   font-family: Rawline, sans-serif;
 }
 
-.App {
-  display: flex;
-  flex-direction: column;
-}
+//.App {
+//  display: flex;
+//  flex-direction: column;
+//}
 
-main {
-  flex-grow: 1;
-}
+//main {
+//  flex-grow: 1;
+//}
 
 @font-face {
   font-family: Rawline;
